Added single aria-label

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
     <footer class="huddle-footer">
       <div class="icons-container">
-        <a class="icon" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a class="icon" href="#" aria-label="Enter facebook page"
+          ><i class="fa-brands fa-facebook-f"></i
+        ></a>
         <a class="icon" href="#"><i class="fa-brands fa-twitter"></i></a>
         <a class="icon" href="#"><i class="fa-brands fa-instagram"></i></a>
       </div>
