Added remaining aria-labels

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
         <a class="icon" href="#" aria-label="Enter facebook page"
           ><i class="fa-brands fa-facebook-f"></i
         ></a>
-        <a class="icon" href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a class="icon" href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a class="icon" href="#" aria-label="Enter twitter page"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a class="icon" href="#" aria-label="Enter instagram page"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
       </div>
       <p class="attribution">
         Challenge by
